--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo Step sequence</title>
+    <title>Photo Step Sequencer</title>
     <link rel="stylesheet" href="assets/style.css" />
     <script src="assets/script.js" defer></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/p5.js"></script>
@@ -11,8 +11,7 @@
   </head>
   <body>
     <div id="p5container"></div>
-    
-    <main>
-    </main>
+
+    <main></main>
   </body>
 </html>
